# tree-sitter-kanata

./: .gitattributes  Cargo.toml  README.md  grammar.js  justfile  tree-sitter.json
.github/workflows/: ci.yml
bindings/go/: binding_test.go
bindings/python/: pyproject.toml
bindings/swift/: Package.swift
examples/: example.kbd  extra.kbd
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: atoms.txt  comments.txt  forms.txt  strings.txt
