[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-kanata"
description = "Tree-sitter grammar for kanata"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "kanata"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "postsolar" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "../../README.md"

[project.urls]
Homepage = "https://github.com/postsolar/tree-sitter-kanata"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"

[tool.setuptools]
packages = ["tree_sitter_kanata"]

[tool.setuptools.package-data]
tree_sitter_kanata = ["*.pyi", "py.typed"]

[tool.setuptools.ext-modules]
"tree_sitter_kanata._binding" = { sources = ["tree_sitter_kanata/binding.c", "../../src/parser.c", "../../src/scanner.c"], include_dirs = ["../../src"] }
